--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 
     <groupId>org.springframework</groupId>
     <artifactId>gs-securing-web</artifactId>
+	<packaging>war</packaging>
     <version>0.1.0</version>
 
     <parent>
@@ -24,6 +25,15 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <!-- end::security[] -->
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
